# AprilTagsTest_1

app/: build.gradle
app/src/androidTest/java/com/example/apriltagstest_1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/apriltags/: CMakeLists.txt
app/src/main/cpp/: apriltag_jni.c
app/src/main/java/com/example/apriltagstest_1/: ApriltagDetection.java  ApriltagNative.java  BitmapUtil.java  Camera2Demo.java  Camera2View.java  DateUtil.java  MainActivity.java  PermissionUtil.java  TakeShootingActivity.java  TextureViewActivity.java
app/src/main/res/layout/: activity_take_shooting.xml  activity_texture_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/apriltagstest_1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
